--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "npx prisma db pull && npx prisma db push",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
