--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.12.0",
+    "rate-limiter-flexible": "^5.0.0",
     "resend": "^3.2.0"
   },
   "name": "backend",
